--- a/modules/ROOT/pages/6.0-release-notes-known-issues.adoc
+++ b/modules/ROOT/pages/6.0-release-notes-known-issues.adoc
@@ -39,6 +39,6 @@ The expected behavior is for there to be no overlap between the editor content a
 Workaround::
 Use a toolbar mode other than the default floating mode. For details, see the xref:toolbar-configuration-options.adoc#toolbar_mode[`+toolbar_mode+` option].
 +
-Otherwise, use a different premium skin than noted above. For details, see: xref:premium-skins-and-icons.adoc[Tiny Skins and Icon Packs].
+Otherwise, use a different premium skin than noted above. For details, see: xref:enhanced-skins-and-icon-packs.adoc[Tiny Skins and Icon Packs].
 
 // end::known-issues[]
