--- a/modules/ROOT/partials/module-loading/bundling-skin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-skin-files.adoc
@@ -34,7 +34,7 @@ Dark skin (oxide-dark)::
 
 == Premium Skins
 
-For information on premium editor skins, see: xref:premium-skins-and-icons.adoc[{prem_skins_icons}].
+For information on premium editor skins, see: xref:enhanced-skins-and-icon-packs.adoc[{prem_skins_icons}].
 
 Bootstrap skin::
 ....
