--- a/modules/ROOT/pages/6.0-release-notes-premium-changes.adoc
+++ b/modules/ROOT/pages/6.0-release-notes-premium-changes.adoc
@@ -361,7 +361,7 @@ The {productname} 6.0 release includes an accompanying release of the *Premium S
 //
 // Add description here.
 
-For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
+For information on using premium skins and icon packs, see: xref:enhanced-skins-and-icon-packs.adoc[Premium Skins and Icon Packs].
 
 //=== Premium Skins and Icon Packs Bug fixes
 //
@@ -369,7 +369,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 //
 // Add description here.
 //
-//For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
+//For information on using premium skins and icon packs, see: xref:enhanced-skins-and-icon-packs.adoc[Premium Skins and Icon Packs].
 
 [[accompanying-premium-self-hosted-server-side-component-changes]]
 == Accompanying Premium self-hosted server-side component changes
