--- a/modules/ROOT/pages/6.0.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.0.2-release-notes.adoc
@@ -42,7 +42,7 @@ The **Premium Skins and Icon Packs** release includes the following bug fixes:
 * Added background and additional spacing for the text labeled buttons in the toolbar to improve visual clarity.
 * Toolbar split buttons with text used an incorrect width on touch devices.
 
-For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
+For information on using premium skins and icon packs, see: xref:enhanced-skins-and-icon-packs.adoc[Premium Skins and Icon Packs].
 
 
 [[general-bug-fixes]]
