--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -447,7 +447,7 @@ The **Premium Skins and Icon Packs** release includes the following updates:
 
 The **Premium Skins and Icon Packs** were rebuilt to pull in the changes also incorporated into the default {productname} 6.7.0 skin, Oxide.
 
-For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
+For information on using premium skins and icon packs, see: xref:enhanced-skins-and-icon-packs.adoc[Premium Skins and Icon Packs].
 
 
 [[improvements]]
