DOC-2372: Rename and populate index files to match latest

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,5 +1,5 @@
 * xref:quick-start.adoc[Quick start]
-* xref:general-configuration-guide.adoc[Introduction & getting started]
+* xref:getting-started.adoc[Introduction & getting started]
 ** xref:basic-setup.adoc[Basic setup]
 ** xref:use-tinymce-classic.adoc[Classic editing mode]
 ** xref:use-tinymce-inline.adoc[Inline editing mode]
@@ -48,7 +48,7 @@
 ** xref:file-picker.adoc[Basic local file picker]
 ** xref:local-upload.adoc[Local file upload]
 * xref:tinymce-for-mobile.adoc[Mobile]
-* xref:configure[Configuration reference]
+* xref:configure.adoc[Configuration reference]
 ** xref:integration-and-setup.adoc[Integration options]
 ** xref:editor-appearance.adoc[User interface options]
 ** xref:content-appearance.adoc[Content appearance options]
@@ -182,7 +182,7 @@
 ** xref:enterprise-export.adoc[Export]
 ** xref:support.adoc[Professional support]
 ** xref:enterprise-system-requirements.adoc[Supported Premium Versions and Platforms]
-* xref:tinydrive.adoc[Tiny Drive]
+* Tiny Drive
 ** xref:tinydrive-introduction.adoc[Introduction]
 ** xref:tinydrive-getting-started.adoc[Getting started]
 ** xref:tinydrive-jwt-authentication.adoc[JWT Authentication]
@@ -195,7 +195,7 @@
 ** xref:tinydrive-integrations.adoc[Integrations]
 *** xref:tinydrive-dropbox-integration.adoc[Dropbox]
 *** xref:tinydrive-dropbox-and-google-drive.adoc[Google Drive]
-** xref:tinydrive-api.adoc[API]
+** API
 *** xref:standalone.adoc[Standalone API]
 *** xref:introduction-to-tinydrive-apis.adoc[Plugin API]
 ** xref:tinydrive-changelog.adoc[Changelog]
