--- a/modules/ROOT/pages/demo-tinydrive.adoc
+++ b/modules/ROOT/pages/demo-tinydrive.adoc
@@ -6,6 +6,6 @@
 
 == Interactive example
 
-This example shows you how to use {cloudfilemanager} for your file and image management. For more information on {cloudfilemanager}, see the xref:tinydrive.adoc[docs].
+This example shows you how to use {cloudfilemanager} for your file and image management. For more information on {cloudfilemanager}, see the xref:tinydrive-introduction.adoc[docs].
 
 liveDemo::drive-demo[]
