--- a/modules/ROOT/pages/editor-and-features.adoc
+++ b/modules/ROOT/pages/editor-and-features.adoc
@@ -5,7 +5,7 @@
 
 {cloudname} is the easiest way to integrate {productname} and upgrade to premium plugins.
 
-{cloudname} can be used without an API key. Refer to the xref:general-configuration-guide.adoc[Introduction & getting started] guide for more information. Sign up for an API key and update the script tag to use premium plugins or avoid the in-editor developer warning.
+{cloudname} can be used without an API key. Refer to the xref:getting-started.adoc[Introduction & getting started] guide for more information. Sign up for an API key and update the script tag to use premium plugins or avoid the in-editor developer warning.
 
 All {cloudname} accounts include a free, pre-configured {cloudname} image proxy service. This setup uses the xref:editimage.adoc[Image tools] plugin.
 
