--- a/modules/ROOT/pages/enterprise-tinydrive.adoc
+++ b/modules/ROOT/pages/enterprise-tinydrive.adoc
@@ -9,7 +9,7 @@
 
 == Configuring the editor for Tiny Drive
 
-Once you have the API key, or if you are a current {cloudname} user who already has an API key, then you have access to {cloudfilemanager}. In order to get the service up and running, you'll need to complete a few more steps. See our xref:tinydrive.adoc[documentation] for more information.
+Once you have the API key, or if you are a current {cloudname} user who already has an API key, then you have access to {cloudfilemanager}. In order to get the service up and running, you'll need to complete a few more steps. See our xref:tinydrive-introduction.adoc[documentation] for more information.
 
 == Security & performance
 
@@ -25,5 +25,5 @@ liveDemo::drive-demo[]
 
 :pluginname: Tiny Drive
 :pluginminimumplan: tierone
-:plugindocspage: tinydrive.adoc
+:plugindocspage: tinydrive-introduction.adoc
 include::partial$misc/purchase-premium-plugins.adoc[]
