--- a/modules/ROOT/pages/examples.adoc
+++ b/modules/ROOT/pages/examples.adoc
@@ -1,6 +1,152 @@
-= Examples & demos
+= Examples & Demos
 :description: Working examples of TinyMCE's popular functionality.
 :redirect_from: ["/example/", "/examples/", "/tutorial/", "/tutorials/", "/example-tutorial/", "/try-tinymce/"]
 :title_nav: Examples
 :type: folder
 
+// 2 Columns, both asciidoc
+[cols=2*a]
+|===
+
+|
+[.lead]
+xref:basic-example.adoc[Basic example]
+
+Basic example
+
+|
+[.lead]
+xref:full-featured.adoc[Full featured]
+
+Full featured demo
+
+|
+[.lead]
+xref:demo-casechange.adoc[Case Change]
+
+Case Change demo
+
+|
+[.lead]
+xref:comments-demo.adoc[Comments]
+
+Comments demo
+
+|
+[.lead]
+xref:demo-checklist.adoc[Checklist]
+
+Checklist demo
+
+|
+[.lead]
+xref:demo-pageembed.adoc[Page Embed]
+
+Page Embed demo
+
+|
+[.lead]
+xref:demo-permanentpen.adoc[Permanent Pen]
+
+Permanent Pen demo
+
+|
+[.lead]
+xref:demo-formatpainter.adoc[Format Painter]
+
+Format Painter demo
+
+|
+[.lead]
+xref:demo-tinydrive.adoc[Tiny Drive]
+
+Tiny Drive demo
+
+|
+[.lead]
+xref:distraction-free-demo.adoc[Distraction-free editor]
+
+Distraction-free editor demo
+
+|
+[.lead]
+xref:inline.adoc[Inline editor]
+
+Inline editor demo
+
+|
+[.lead]
+xref:classic-demo.adoc[Classic editor mode]
+
+Classic editor mode demo
+
+|
+[.lead]
+xref:image-tools.adoc[Image tools]
+
+Image tools demo
+
+|
+[.lead]
+xref:format-custom.adoc[Custom formats]
+
+Custom formats demo
+
+|
+[.lead]
+xref:format-html5.adoc[HTML5 formats]
+
+HTML5 formats demo
+
+|
+[.lead]
+xref:url-conversion.adoc[URL conversion]
+
+URL conversion demo
+
+|
+[.lead]
+xref:valid-elements.adoc[Valid elements]
+
+Valid elements demo
+
+|
+[.lead]
+xref:custom-basic-toolbar-button.adoc[Custom toolbar button]
+
+Custom toolbar button demo
+
+|
+[.lead]
+xref:custom-menu-toolbar-button.adoc[Custom toolbar menu button]
+
+Custom toolbar menu button demo
+
+|
+[.lead]
+xref:custom-split-toolbar-button.adoc[Custom toolbar split button]
+
+Custom toolbar split button demo
+
+|
+[.lead]
+xref:custom-basic-menu-items.adoc[Custom menu item]
+
+Custom menu item demo
+
+|
+[.lead]
+xref:file-picker.adoc[Basic local file picker]
+
+Basic local file picker demo
+
+|
+[.lead]
+xref:local-upload.adoc[Local file upload]
+
+Local file upload demo
+
+// Empty cell to even out rows
+| 
+
+|===
