--- a/modules/ROOT/pages/release-notes58.adoc
+++ b/modules/ROOT/pages/release-notes58.adoc
@@ -172,7 +172,7 @@ The {productname} 5.8 release includes an accompanying release of *Tiny Drive*.
 * Fixed a bug where specifying 'audio' for the `filetype` setting would not list the files in the grid view.
 * Fixed a bug where tabbing though the user interface could throw an error.
 
-For information on Tiny Drive, see: xref:tinydrive.adoc[Tiny Drive].
+For information on Tiny Drive, see: xref:tinydrive-introduction.adoc[Tiny Drive].
 
 [[accompanyingpremiumskinsandiconpackschanges]]
 == Accompanying Premium Skins and Icon Packs changes
