--- a/modules/ROOT/pages/release-notes507.adoc
+++ b/modules/ROOT/pages/release-notes507.adoc
@@ -44,7 +44,7 @@ For more information and demos on the new *Premium Skins and Icon Packs* refer t
 
 To try out *Tiny Drive* start with this https://www.tiny.cloud/drive/[dedicated product page] or check out the https://www.tiny.cloud/pricing[pricing page] to see all the flexible pricing options.
 
-For more information on *Tiny Drive* refer to the full xref:tinydrive.adoc[documentation].
+For more information on *Tiny Drive* refer to the full xref:tinydrive-introduction.adoc[documentation].
 
 There is also a demo provided to explore the *Tiny Drive* capabilities xref:tinydrive-introduction.adoc#demo[here].
 
