--- a/modules/ROOT/pages/release-notes581.adoc
+++ b/modules/ROOT/pages/release-notes581.adoc
@@ -41,7 +41,7 @@ The {productname} 5.8.1 release includes an accompanying release of *Tiny Drive*
 
 *Tiny Drive* 1.4.1 fixes an issue where the `skin` setting wasn't working in standalone-mode.
 
-For information on Tiny Drive, see: xref:tinydrive.adoc[Tiny Drive].
+For information on Tiny Drive, see: xref:tinydrive-introduction.adoc[Tiny Drive].
 
 [[general-bug-fixes]]
 == General bug fixes
