DOC-2370: Add new page that describes Tiny Cloud's UBB. (#3226)
* DOC-2370: Add new page that describes Tiny Cloud's UBB.

* DOC-2370: change filename.

* Update modules/ROOT/pages/usage-based-billing.adoc

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -421,3 +421,4 @@
 * xref:invalid-api-key.adoc[Invalid API key]
 * xref:license-key.adoc[License key]
 * xref:support.adoc[Support]
+* xref:usage-based-billing.adoc[Usage-Based Billing]
