DOC-2349: Update React integration cloud/self/hybrid hosted setup docs (#3186)
* DOC-2349: Replaced create-react-app keyword with vite

* DOC-2349: Swapped first couple of steps to vite

* DOC-2349: Swap back to javascript template

* DOC-2349: More small tweaks

* DOC-2349: Swap to `npm run dev`

* DOC-2349: Replace with side-effect imports

* DOC-2349: removed raw-loader and replaced with vite's `?inline` feature

* DOC-2349: Swapped the "deploying" part to reference Vite

* DOC-2349: import App.css in App.jsx

* DOC-2349: Fix up package manager self-hosted

* DOC-2349: Include App.css in BundledEditor versions of App.css

* DOC-2349: Added `npm run preview` optional step

* DOC-2349: Added licenseKey to other package-manager setup

* DOC-2349: Remove other unsused `React` imports

* DOC-2349: Fixed zip-hosted App.jsx

* DOC-2349: Added eslintrc changes and more js to jsx replacements

* DOC-2349: Import skin js files instead

* DOC-2349: Fixed error with help plugin

* DOC-2349: Import oxide skin with js file instead

* DOC-2349: Swapped out these 'gpl' `licenseKey`s

--- a/modules/ROOT/partials/integrations/react-bundling.adoc
+++ b/modules/ROOT/partials/integrations/react-bundling.adoc
@@ -5,8 +5,7 @@
 import { Editor } from '@tinymce/tinymce-react';
 
 // TinyMCE so the global var exists
-// eslint-disable-next-line no-unused-vars
-import tinymce from 'tinymce/tinymce';
+import 'tinymce/tinymce';
 
 // Theme
 import 'tinymce/themes/silver';
@@ -33,22 +32,17 @@ import 'tinymce/plugins/media';
 import 'tinymce/plugins/nonbreaking';
 import 'tinymce/plugins/table';
 import 'tinymce/plugins/help';
+import 'tinymce/plugins/help/js/i18n/keynav/en';
 
 // Content styles, including inline UI like fake cursors
-/* eslint import/no-webpack-loader-syntax: off */
-import contentCss from '!!raw-loader!tinymce/skins/content/default/content.min.css';
-import contentUiCss from '!!raw-loader!tinymce/skins/ui/oxide/content.min.css';
+import 'tinymce/skins/content/default/content.js';
+import 'tinymce/skins/ui/oxide/content.js';
 
 export default function TinyEditorComponent(props) {
-  // note that skin and content_css is disabled to avoid the normal
-  // loading process and is instead loaded as a string via content_style
   return (
     <Editor
-      init={{
-        skin: false,
-        content_css: false,
-        content_style: [contentCss, contentUiCss].join('\n'),
-      }}
+      licenseKey='your-license-key'
+      {...props}
     />
   );
 }
