--- a/modules/ROOT/pages/a11ychecker.adoc
+++ b/modules/ROOT/pages/a11ychecker.adoc
@@ -360,6 +360,13 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+[[events]]
+== Events
+
+The {pluginname} plugin provides the following events.
+
+include::partial$events/a11ychecker-events.adoc[]
+
 == APIs
 
 The {pluginname} plugin provides the following APIs.
