DOC-2381: add new Math plugin documentation for TinyMCE 7.1.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -314,6 +314,7 @@
 *** xref:editimage.adoc[Image Editing]
 *** xref:inline-css.adoc[Inline CSS]
 *** xref:linkchecker.adoc[Link Checker]
+*** xref:math.adoc[Math]
 *** xref:markdown.adoc[Markdown]
 *** xref:mentions.adoc[Mentions]
 *** xref:mergetags.adoc[Merge Tags]
