--- a/modules/ROOT/partials/configuration/icon_list.adoc
+++ b/modules/ROOT/partials/configuration/icon_list.adoc
@@ -103,6 +103,7 @@
 | `+list-num-upper-roman+` | image:icons/list-num-upper-roman.svg[list-num-upper-roman.svg] | `+list-num-upper-roman.svg+`
 | `+lock+` | image:icons/lock.svg[lock.svg] | `+lock.svg+`
 | `+ltr+` | image:icons/ltr.svg[ltr.svg] | `+ltr.svg+`
+| `+math+` | image:icons/math-equation.svg[math-equation.svg] | `+math-equation.svg+`
 | `+minus+` | image:icons/minus.svg[minus.svg] | `+minus.svg+`
 | `+more-drawer+` | image:icons/more-drawer.svg[more-drawer.svg] | `+more-drawer.svg+`
 | `+new-document+` | image:icons/new-document.svg[new-document.svg] | `+new-document.svg+`
