--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -107,6 +107,12 @@ Validate links, as they are typed.
 
 a|
 [.lead]
+xref:math.adoc[Math]
+
+Enable insertion of Katex and MathML.
+
+a|
+[.lead]
 xref:markdown.adoc[Markdown]
 
 Enable conversion of pure markdown on paste.
