--- a/modules/ROOT/partials/configuration/defaultmenuitems.adoc
+++ b/modules/ROOT/partials/configuration/defaultmenuitems.adoc
@@ -6,7 +6,7 @@ tinymce.init({
     file: { title: 'File', items: 'newdocument restoredraft | preview | importword exportpdf exportword | print | deleteallconversations' },
     edit: { title: 'Edit', items: 'undo redo | cut copy paste pastetext | selectall | searchreplace' },
     view: { title: 'View', items: 'code revisionhistory | visualaid visualchars visualblocks | spellchecker | preview fullscreen | showcomments' },
-    insert: { title: 'Insert', items: 'image link media addcomment pageembed codesample inserttable | charmap emoticons hr | pagebreak nonbreaking anchor tableofcontents | insertdatetime' },
+    insert: { title: 'Insert', items: 'image link media addcomment pageembed codesample inserttable | math | charmap emoticons hr | pagebreak nonbreaking anchor tableofcontents | insertdatetime' },
     format: { title: 'Format', items: 'bold italic underline strikethrough superscript subscript codeformat | styles blocks fontfamily fontsize align lineheight | forecolor backcolor | language | removeformat' },
     tools: { title: 'Tools', items: 'spellchecker spellcheckerlanguage | a11ycheck code wordcount' },
     table: { title: 'Table', items: 'inserttable | cell row column | advtablesort | tableprops deletetable' },
