DOC-2381: update math demo, and removed examples of using equations.

--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -48,57 +48,8 @@ To work with math elements, follow these steps:
 . After reviewing the formula, click the `save` button.
 .. This inserts the finalized math equation into the editor, wrapped in either a `+<div>+` or `+<span>+` element based on the `text-wrap` chosen. The formula is inserted at the last cursor position before the modal dialog was opened.
 
-== Custom_elements
-
-{pluginname} uses the below `custom_elements` to insert complex mathematical content into {productname}.
-
-[TIP]
-If 
-
-=== `blockMathTag`
-[source, html]
-----
-[blockMathTag]: {
-  extends: 'div', <!-- extends the functionality of a standard <div> tag -->
-  attributes: [ 'formula' ], <!-- a recognized attribute -->
-  children: [ 'math' ] <!-- holds the nested mathematical content -->
-},
-----
-
-.Example using `blockMathTag`
-[source, html]
-----
-<div>
-  <tiny-math-block formula="">
-    <math>
-      <mrow></mrow>
-    </math>
-  </tiny-math-block>
-</div>
-----
-
-=== `inlineMathTag`
-[source, html]
-----
-[inlineMathTag]: {
-  extends: 'span', <!-- extends the functionality of a standard <span> tag -->
-  attributes: [ 'formula' ], <!-- a recognized attribute -->
-  children: [ 'math' ] <!-- holds the nested mathematical content -->
-},
-----
-
-.Example using `inlineMathTag`
-[source, html]
-----
-<p>
-  <tiny-math-inline formula="">
-    <math>
-      <mrow></mrow>
-    </math>
-  </tiny-math-inline>
-</p>
-
-----
+[NOTE]
+{pluginname} uses the below `custom_elements` to insert complex mathematical content into {productname}. {companyname} does not recommend using custom_element names for `blockMathTag` and `inlineMathTag` to avoid issues when using the {pluginname}.
 
 Learn more about Custom elements, see xref:content-filtering.adoc#custom_elements[custom_elements] and xref:content-filtering.adoc#example-using-custom_elements-with-presets-such-as-blocks-phrasing-and-flow[example using custom_elements].
 
