--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -11,7 +11,7 @@ include::partial$misc/admon-paid-addon-pricing.adoc[]
 
 include::partial$misc/admon-requires-7.1v.adoc[]
 
-The {pluginname} plugin provides a way for users to insert complex formulas into `+<math>+` element blocks.
+The {pluginname} plugin provides a way for users to insert complex formulas.
 
 == Interactive example
 
