--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -46,7 +46,7 @@ To work with math elements, follow these steps:
 .. Choose to `insert` the formula either as a **block** paragraph or **inline** with text.
 . Once the formula has been added, the preview section within the modal dialog will render the final math equation.
 . After reviewing the formula, click the `save` button.
-.. This inserts the finalized math equation into the editor, wrapped in either a `+<div>+` or `+<span>+` element based on the `text-wrap` chosen. The formula is inserted at the last cursor position before the modal dialog was opened.
+.. This inserts the finalized math equation into the editor, wrapped in either a `+<tiny-math-block>+` or `+<tiny-math-inline>+` element based on the `text-wrap` chosen. The formula is inserted at the last cursor position before the modal dialog was opened.
 
 [NOTE]
 {pluginname} uses the below `custom_elements` to insert complex mathematical content into {productname}. {companyname} does not recommend using custom_element names for `blockMathTag` and `inlineMathTag` to avoid issues when using the {pluginname}.
