--- a/modules/ROOT/pages/math.adoc
+++ b/modules/ROOT/pages/math.adoc
@@ -1,6 +1,6 @@
 = Math plugin
 :navtitle: Math Plugin
-:description: {pluginname} plugin provides a way for users to insert a `+<math>+` element into the {productname} editor.
+:description: {pluginname} plugin provides a way for users to insert math equation into the {productname} editor.
 :description_short: Insert `+<math>+` elements into {productname}.
 :keywords: plugin, math, formulas
 :pluginname: Math
