--- a/modules/ROOT/partials/plugin-files/plugin-file-bundling-message.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-bundling-message.adoc
@@ -1,1 +1,1 @@
-When bundling replace the `+plugincode+` with the specific plugins in your {productname} configuration. 
+When bundling, replace the `+plugincode+` with the specific plugins in your {productname} configuration. 
