--- a/modules/ROOT/partials/plugin-files/plugin-file-index.js.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-index.js.adoc
@@ -5,5 +5,5 @@ The below base folder is required for each plugin when bundling {productname}.
 
 [source, js]
 ----
-./plugins/plugincode
+./plugins/<plugincode>
 ----
