--- a/modules/ROOT/partials/plugin-files/plugin-file-bundling-also-requires.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-bundling-also-requires.adoc
@@ -1,2 +1,2 @@
 [TIP]
-The below plugin also requires the additional file along side the xref:bundling-plugins.adoc#base-folder[base folder].
+The below plugin also requires additional files to be included along side the xref:bundling-plugins.adoc#base-folder[base folder].
