--- a/modules/ROOT/pages/bundling-plugins.adoc
+++ b/modules/ROOT/pages/bundling-plugins.adoc
@@ -10,7 +10,7 @@ include::partial$module-loading/bundling-ref-example.adoc[]
 include::partial$plugin-files/plugin-file-index.js.adoc[]
 
 
-Example syntax for including the example "plugin" in a bundle using `content.js`for bundling:
+Example syntax for including the example "<plugincode>" plugin in a bundle using `content.js`for bundling:
 
 [cols='1,1,4']
 |===
