DOC-2368: update plugin-file-list-emoticons.adoc file to include note.

--- a/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
@@ -4,3 +4,6 @@
 ./plugins/emoticons/js/emojiimages.js
 ./plugins/emoticons/js/emojis.js
 ----
+
+[NOTE]
+Only one of the above `.js` files are required, depending on which one is chosen through the `emoticons_database` setting.
