DOC-2368: Update bundling documentation for all premium plugins for new index.js files. (#3224)
* DOC-2368: Update bundling documentation for all premium plugins for new index.js files.

* DOC-2368: additional improvements.

* DOC-2368: additional copy edits to bundling-plugins.adoc and related partials,includes.

* Revert "DOC-2339: On-premises documentation for document converters. (#3180)"

This reverts commit 93d7ffed18df8cb3e375652998e98692b1665cee.

* DOC-2368: update plugin code ref.

* DOC-2368: delete plugin-file-plugins.adoc pages, update plugin.js for import code blocks.

* Update modules/ROOT/partials/plugin-files/plugin-file-bundling-message.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/plugin-files/plugin-file-index.js.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/plugin-files/plugin-file-bundling-also-requires.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/bundling-plugins.adoc

* Update modules/ROOT/pages/bundling-plugins.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* DOC-2368: update plugin-file-list-emoticons.adoc file to include note.

* DOC-2368: add note to reference back to the tinymce v6 docs if version is equal to or less than 7.0.

* Update modules/ROOT/pages/bundling-plugins.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

---------

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

--- a/modules/ROOT/partials/module-loading/admon-bundling-plugin-langs.adoc
+++ b/modules/ROOT/partials/module-loading/admon-bundling-plugin-langs.adoc
@@ -1,1 +1,26 @@
-NOTE: The plugin language files (such as `+./plugins/plugin/langs/sv_SE.js+`) are required where the editor user interface is localized using the xref:ui-localization.adoc#language[language option]. Please refer to xref:bundling-plugins.adoc#plugin-language-files[plugin-language-files]
+[NOTE]
+====
+Plugin language files (such as `+./plugins/<plugincode>/langs/sv_SE.js+`) are required where the editor user interface is localized using the xref:ui-localization.adoc#language[language option].
+
+The below plugins require these xref:bundling-plugins.adoc#plugin-language-files[plugin-language-files]
+
+* AI Assistant (+ai+)
+* Accessibility Checker (+a11ychecker+)
+* Enhanced Code (+advcode+)
+* Enhanced Tables (+advtable+)
+* Templates (+advtemplate+)
+* Spelling Autocorrect (+autocorrect+)
+* Image Editing (+editimage+)
+* Export to PDF (+exportpdf+)
+* Export to Word (+exportword+)
+* Footnotes (+footnotes+)
+* Import from Word (+importword+)
+* Merge Tags (+mergetags+)
+* Page Embedding (+pageembed+)
+* PowerPaste (+powerpaste+)
+* Revision History (+revisionhistory+)
+* Table of Contents (+tableofcontents+)
+* Comments (+tinycomments+)
+* Spell Checker (+tinymcespellchecker+)
+* Typography (+typography+)
+====
