--- a/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
@@ -1,7 +1,9 @@
-.Base js file
+.Requires other js files
 [source, js]
 ----
-./plugins/emoticons/plugin.js
 ./plugins/emoticons/js/emojiimages.js
 ./plugins/emoticons/js/emojis.js
 ----
+
+[NOTE]
+Only one of the above `.js` files are required, depending on which one is chosen through the `emoticons_database` setting.
