--- a/modules/ROOT/pages/bundling-plugins.adoc
+++ b/modules/ROOT/pages/bundling-plugins.adoc
@@ -7,17 +7,13 @@
 include::partial$module-loading/bundling-ref-example.adoc[]
 :!editorcomponent:
 
-The following table shows examples of the syntax used to bundle the following plugin.
+[NOTE]
+If using {productname} 7.0.1 or earlier, please refer to link:https://www.tiny.cloud/docs/tinymce/6/bundling-plugins/[Bundling TinyMCE plugins using module loading] from the {productname} v6 documentation guide.
 
-Required files for an example plugin:
+include::partial$plugin-files/plugin-file-index.js.adoc[]
 
-[source, js]
-----
-./plugins/example/content.js // or './plugins/example/content_css.js'
-./plugins/example/plugin.js
-----
 
-Example syntax for including the example "plugin" in a bundle using `content.js` or `content_css.js` files for bundling:
+Example syntax for including the example "<plugincode>" plugin in a bundle using `content.js`for bundling:
 
 [cols='1,1,4']
 |===
@@ -28,18 +24,14 @@ Example syntax for including the example "plugin" in a bundle using `content.js`
 a|
 [source, js]
 ----
-import pluginCss from 'tinymce/plugins/example/content.js';
-//import pluginCss from 'tinymce/plugins/example/content_css.js';
-import 'tinymce/plugins/example';
+import 'tinymce/plugins/<plugincode>';
 ----
 
 |`.zip`
 a|
 [source, js]
 ----
-import '../tinymce/plugins/example/content.js';
-//import '../tinymce/plugins/example/content_css.js';
-import '../tinymce/plugins/example/plugin';
+import '../tinymce/plugins/<plugincode>';
 ----
 
 .2+|Common JS
@@ -47,18 +39,14 @@ import '../tinymce/plugins/example/plugin';
 a|
 [source, js]
 ----
-const pluginCss = require('tinymce/plugins/example/content.js');
-//require('tinymce/plugins/example/content_css.js'); 
-require('tinymce/plugins/example');
+require('tinymce/plugins/<plugincode>');
 ----
 
 |`.zip`
 a|
 [source, js]
 ----
-const pluginCss = require('../tinymce/plugins/example/content.js');
-//require('../tinymce/plugins/example/content_css.js');
-require('../tinymce/plugins/example/plugin.js');
+require('../tinymce/plugins/<plugincode>');
 ----
 |===
 
