--- a/modules/ROOT/partials/integrations/react-quick-start.adoc
+++ b/modules/ROOT/partials/integrations/react-quick-start.adoc
@@ -460,37 +460,36 @@ import './tinymce/icons/default/icons.min.js';
 // Editor styles
 import './tinymce/skins/ui/oxide/skin.min.js';
 
-// importing the plugin js.
+// importing the plugin index.js file.
 // if you use a plugin that is not listed here the editor will fail to load
-import './tinymce/plugins/advlist/plugin.min.js';
-import './tinymce/plugins/anchor/plugin.min.js';
-import './tinymce/plugins/autolink/plugin.min.js';
-import './tinymce/plugins/autoresize/plugin.min.js';
-import './tinymce/plugins/autosave/plugin.min.js';
-import './tinymce/plugins/charmap/plugin.min.js';
-import './tinymce/plugins/code/plugin.min.js';
-import './tinymce/plugins/codesample/plugin.min.js';
-import './tinymce/plugins/directionality/plugin.min.js';
-import './tinymce/plugins/emoticons/plugin.min.js';
-import './tinymce/plugins/fullscreen/plugin.min.js';
-import './tinymce/plugins/help/plugin.min.js';
-import './tinymce/plugins/help/js/i18n/keynav/en.js';
-import './tinymce/plugins/image/plugin.min.js';
-import './tinymce/plugins/importcss/plugin.min.js';
-import './tinymce/plugins/insertdatetime/plugin.min.js';
-import './tinymce/plugins/link/plugin.min.js';
-import './tinymce/plugins/lists/plugin.min.js';
-import './tinymce/plugins/media/plugin.min.js';
-import './tinymce/plugins/nonbreaking/plugin.min.js';
-import './tinymce/plugins/pagebreak/plugin.min.js';
-import './tinymce/plugins/preview/plugin.min.js';
-import './tinymce/plugins/quickbars/plugin.min.js';
-import './tinymce/plugins/save/plugin.min.js';
-import './tinymce/plugins/searchreplace/plugin.min.js';
-import './tinymce/plugins/table/plugin.min.js';
-import './tinymce/plugins/visualblocks/plugin.min.js';
-import './tinymce/plugins/visualchars/plugin.min.js';
-import './tinymce/plugins/wordcount/plugin.min.js';
+import './tinymce/plugins/advlist';
+import './tinymce/plugins/anchor';
+import './tinymce/plugins/autolink';
+import './tinymce/plugins/autoresize';
+import './tinymce/plugins/autosave';
+import './tinymce/plugins/charmap';
+import './tinymce/plugins/code';
+import './tinymce/plugins/codesample';
+import './tinymce/plugins/directionality';
+import './tinymce/plugins/emoticons';
+import './tinymce/plugins/fullscreen';
+import './tinymce/plugins/help';
+import './tinymce/plugins/image';
+import './tinymce/plugins/importcss';
+import './tinymce/plugins/insertdatetime';
+import './tinymce/plugins/link';
+import './tinymce/plugins/lists';
+import './tinymce/plugins/media';
+import './tinymce/plugins/nonbreaking';
+import './tinymce/plugins/pagebreak';
+import './tinymce/plugins/preview';
+import './tinymce/plugins/quickbars';
+import './tinymce/plugins/save';
+import './tinymce/plugins/searchreplace';
+import './tinymce/plugins/table';
+import './tinymce/plugins/visualblocks';
+import './tinymce/plugins/visualchars';
+import './tinymce/plugins/wordcount';
 
 // importing plugin resources
 import './tinymce/plugins/emoticons/js/emojis.js';
