add plugin to available-menu-items.adoc

--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -150,6 +150,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 :plugincode: lists
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Math
+:plugincode: math
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Media
 :plugincode: media
