add plugin to available-toolbar-buttons.adoc

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -172,6 +172,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :plugincode: lists
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Math
+:plugincode: math
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Media
 :plugincode: media
